<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_green"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/gerenziliao_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/back_white" />

        <TextView
            style="@style/dingbudaohangliang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/gerenziliao" />

        <TextView
            android:id="@+id/gerenziliao_baocun"
            style="@style/dingbudaohangliang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/baocun1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gerenziliao_touxiang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            style="@style/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/touxiang"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/gerenziliao_touxiang2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:src="@drawable/seticon2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            style="@style/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/nicheng"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/gerenziliao_nicheng"
            style="@style/textSize3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:onClick="true"
            android:padding="10dp"
            android:text="@string/zuji"
            android:textColor="@color/gray_white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gerenziliao_xingbie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            style="@style/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/xingbie"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/gerenziliao_xingbie1"
            style="@style/textSize3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/nv"
            android:textColor="@color/gray_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            style="@style/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/chengshi"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/gerenziliao_chengshi"
            style="@style/textSize3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:onClick="true"
            android:padding="10dp"
            android:text="@string/chongqing"
            android:textColor="@color/gray_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            style="@style/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/nianling"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/gerenziliao_nianling"
            style="@style/textSize3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:inputType="number"
            android:onClick="true"
            android:padding="10dp"
            android:text="24"
            android:textColor="@color/gray_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            style="@style/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/aihao"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/gerenziliao_aihao"
            style="@style/textSize3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/buchaoguo2"
            android:onClick="true"
            android:padding="10dp"
            android:text="@string/aihaoleixing"
            android:textColor="@color/gray_white"
             android:textColorHint="@color/gray_white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            style="@style/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/gexingqianming"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/gerenziliao_gexingqianming"
            style="@style/textSize3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/buchaoguo"
            android:onClick="true"
            android:padding="10dp"
            android:text="@string/qianming"
            android:textColorHint="@color/gray_white"
            android:textColor="@color/gray_white" />
    </LinearLayout>

</LinearLayout>