<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/touxiang_pinglun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/praise_friend_head" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:orientation="vertical" >

                <TextView
                    style="@style/textSize2"
                    android:id="@+id/otheraName_pinglun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zuji"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/zipinglun_pinglun"
                        style="@style/textSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:hint="@string/pinglun" />

                    <TextView
                        android:id="@+id/nide_pinglun"
                        style="@style/textSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nide"
                        android:textColor="@color/blue" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/huifu_pinglun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/huifu"
                android:textColor="@color/blue" />
        </LinearLayout>

        <TextView
            android:id="@+id/pingjia_pinglun"
            style="@style/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/pingjia"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/gray"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/userImage_pinglun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/praise_background" />

            <TextView
                android:id="@+id/userName_pinglun"
                style="@style/textSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/zushiye"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/dongtai_pinglun"
                style="@style/textSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/dongtai"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/time_pinglun"
            style="@style/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="10dp"
            android:text="@string/shijian" />
    </LinearLayout>

</LinearLayout>