<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_green" >

        <ImageButton
            android:id="@+id/mima_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/back_white" />

        <TextView
            style="@style/dingbudaohangliang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/shezhimima" />
    </RelativeLayout>
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="45dp"
	    android:background="@color/white"
	    >
	    <TextView
	        android:id="@+id/zujihao"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="10dp"
	        android:layout_weight="1"
	        android:text="@string/zujihao"
	        style="@style/textSize2"
	        android:textColor="@color/black"/>
	    <EditText
	        android:id="@+id/zhaohao_mima"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_below="@id/zujihao"
	        android:inputType="number"
	        android:maxLength="15"
	        android:padding="10dp"
	        android:background="@null"
	        android:layout_weight="3"
	        android:layout_marginLeft="90dp"
	        android:hint="@string/shoujihao"
	        style="@style/textSize"
	        android:textColor="@color/black"/>
	</RelativeLayout>
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="1dp"
	    android:background="@color/white"
	    >
	    <TextView
	        android:id="@+id/mima"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="10dp"
	        android:layout_weight="1"
	        android:text="@string/mima"
	        style="@style/textSize2"
	        android:textColor="@color/black"/>
	    <EditText
	        android:id="@+id/mima_mima"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_below="@id/mima"
	        android:padding="10dp"
	        android:background="@null"
	        android:maxLength="15"
	        android:layout_weight="3"
	        android:inputType="textPassword"
	        android:layout_marginLeft="90dp"
	        android:hint="@string/qing"
	        style="@style/textSize"
	        android:textColor="@color/black"/>
	</RelativeLayout>
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="1dp"
	    android:background="@color/white"
	    >
	    <TextView
	        android:id="@+id/queren"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="10dp"
	        android:layout_weight="1"
	        android:text="@string/queren"
	        style="@style/textSize2"
	        android:textColor="@color/black"/>
	    <EditText
	        android:id="@+id/quren_mima"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_below="@id/queren"
	        android:inputType="textPassword"
	        android:maxLength="15"
	        android:padding="10dp"
	        android:background="@null"
	        android:layout_weight="3"
	        android:layout_marginLeft="90dp"
	        android:hint="@string/zaici"
	        style="@style/textSize"
	        android:textColor="@color/black"/>
	</RelativeLayout>
</LinearLayout>
